--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@rails/activestorage": "^6.0.0",
         "@rails/ujs": "^6.0.0",
         "@rails/webpacker": "5.4.3",
+        "chart.js": "^3.9.1",
         "stimulus": "^3.1.0",
         "turbolinks": "^5.2.0",
         "webpack": "^4.46.0",
@@ -15,8 +16,8 @@
     "devDependencies": {
         "webpack-dev-server": "^3"
     },
-    "scripts" : {
+    "scripts": {
         "lint": "bundle exec rubocop -A",
-        "format:fix":"bundle exec rubocop --fix-layout"
+        "format:fix": "bundle exec rubocop --fix-layout"
     }
 }
