--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "puzzle-fest",
     "private": true,
     "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.1.2",
         "@rails/actioncable": "^6.0.0",
         "@rails/activestorage": "^6.0.0",
         "@rails/ujs": "^6.0.0",
